--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block meta_title %} - Acme Co{% endblock meta_title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{ MEDIA_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
-    <h1>{% block title %}{% endblock title %}</h1>
+    <h1>{% block title %} - Acme Company{% endblock title %}</h1>
     {% block content %}
     {% endblock content %}
     <script src="http://code.jquery.com/jquery.js"></script>
