--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 
-{% block title%}
-  {% block meta_title %}
+{% block meta_title %}
   The Index!
   {{ block.super }}
-  {% endblock meta_title %}
-  {{ block.super }}
+{% endblock meta_title %}
+
+{% block title%}
+  Index
 {% endblock title%}
 
 {% block content %}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 {% endblock content %}
