--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,6 @@
     {% block content %}
     {% endblock content %}
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="{{ MEDIA_URL }}js/bootstrap.min.js"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
   </body>
 </html>
