--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>{% block meta_title %} - Acme Co{% endblock meta_title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="container">
     <h1>{% block title %} - Acme Company{% endblock title %}</h1>
     {% block content %}
     {% endblock content %}
