--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
   </head>
   <body class="container">
     <h1>{% block title %} - Acme Company{% endblock title %}</h1>
