--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,12 @@
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
   </head>
-  <body class="container">
-    <h1>{% block title %} - Acme Company{% endblock title %}</h1>
-    {% block content %}
-    {% endblock content %}
+  <body>
+    <div class="container">
+      <h1>{% block title %} - Acme Company{% endblock title %}</h1>
+      {% block content %}
+      {% endblock content %}
+    </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
   </body>
