--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <title>{% block meta_title %} - Acme Co{% endblock meta_title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
   </head>
   <body>
